Build product-apim using jdk (without integration tests)